--- a/Source/Server/apps/mpconsole/templates/os_managment/os_app_filters.html
+++ b/Source/Server/apps/mpconsole/templates/os_managment/os_app_filters.html
@@ -8,7 +8,7 @@
 {%  endblock %}
 
 {% block pageHeader %}
-	Application Access
+	Software Restrictions
 {%  endblock %}
 
 {% block bodyPanel %}
@@ -30,63 +30,55 @@
 	<script src="{{ url_for('static', filename='yarn_components/colresizable/colResizable-1.6.min.js') }}"></script>
 	<link href="{{ url_for('static', filename='css/mp.css') }}" rel="stylesheet">
 	<script>
-	$( document ).ready(function()
+    $( document ).ready(function()
 	{
-			$('#table').bootstrapTable(
+		$('#table').bootstrapTable (
+		{
+            url: "/osmanage/app_filter/list",
+			striped: true,
+			pagination: true,
+			sidePagination: 'client',
+			pageList: ['10', '25', '50', '100', 'All'],
+			search: true,
+			showRefresh: true,
+			resizable: false,
+			sortable: true,
+			showColumns: true,
+			idField: 'appID',
+			columns: [
 			{
-				striped: true,
-				pagination: true,
-				sidePagination: 'client',
-				pageList: ['10', '25', '50', '100', 'All'],
-				search: true,
-				showRefresh: false,
-				resizable: true,
-				sortable: true,
-				showColumns: false,
-				icons: {
-					refresh: 'fa fa-refresh',
-					toggle: 'fa fa-th-list',
-					columns: 'fa fa-columns',
-					detailOpen: 'glyphicon glyphicon-info-sign',
-					detailClose: 'glyphicon glyphicon-minus-sign'
-				},
-				idField: 'profileID',
-				columns: [
-				{
-						field: 'state',
-						checkbox: true,
-						rowspan: 1,
-						align: 'center',
-						valign: 'middle'
-				},
-				{
-					field: 'operate',
-					title: '',
+					field: 'state',
+					checkbox: true,
+					rowspan: 1,
 					align: 'center',
-					events: operateEvents,
-					formatter: operateFormatter
-				},
-				{% for col in columns %}
-				{
-					field: '{{col[0]}}',
-					title: '{{col[1]}}',
-					{% if col[0] == 'profileID' %}
-					visible: false,
-					{% endif %}
-					sortable: true
-				},
-				{% endfor %}
-				],
-				data: [
-					{% for d in data %}
-					{
-						{% for col in columns %}
-							{{col[0]}} : `{{ d[col[0]] }}`,
-						{% endfor %}
-					},
-					{% endfor %}
-				]
-			});
+					valign: 'middle'
+			},
+			{
+				field: 'operate',
+				title: '',
+				align: 'center',
+				events: operateEvents,
+				formatter: operateFormatter,
+			},
+			{% for col in columns %}
+			{% if col[0] != 'rid' %}
+			{
+				field: '{{col[0]}}',
+				title: '{{col[1]}}',
+				align: 'center',
+				sortable: true,
+                {% if col[2] == '1' %}
+                visible: true,
+                {% else %}
+                visible: false,
+                {% endif %}
+                formatter: formatYesNo,
+
+			},
+            {% endif %}
+			{% endfor %}
+			]
+		});
 	});
 
 	var $table = $('#table'), $delButton = $('#delButton'), $addButton = $('#addButton');
@@ -96,28 +88,25 @@
 		{
 			var ids = $.map($table.bootstrapTable('getSelections'), function (row)
 			{
-				return row.profileID;
+				return row.appID;
 			});
 
 			var formData = new FormData();
-			formData.append("profileID", ids);
+			formData.append("appID", ids);
 			$.ajax({
 				type:'DELETE',
-				url: '/osmanage/profile/delete',
+				url: '/osmanage/app_filter/delete',
 				data: formData,
 				cache: false,
 				processData: false,
 				contentType: false,
 				success: function(){
-					alert("OS Profile Deleted Successfully");
+					alert("Software restriction deleted successfully");
 					$('#modalDialog').modal('hide');
-					$table.bootstrapTable('remove', {
-						field: 'profileID',
-						values: ids
-					});
+					$table.bootstrapTable('refresh');
 				},
 				error: function(jqXHR, textStatus, errorThrown){
-					alert("OS Profile Failed to Delete");
+					alert("Failed to delete software restriction.");
 					$('#modalDialog').modal('hide');
 				}
 			});
@@ -126,16 +115,19 @@
 
 		$addButton.click(function ()
 		{
-			$.get( "/osmanage/profiles/add").done(function(data) {
-				$('#modalTitle').html("New OS Profile");
+		    resetModalWindow();
+		    $.get( "/osmanage/app_filter/add").done(function(data)
+			{
+				$('#modalTitle').html('Software Restriction');
+				$('#modalCancelButton').html('Cancel');
 				$('#modalBody').html(data);
-				$('#modalFooter').hide();
 				$('#modalDialog').addClass("modal-wide");
-				$('#modalBody').css({'height':'72vh'});
 				$('#modalDialog').modal('show');
 
 				$("#modalDialog").on("hidden.bs.modal", function () {
-					$profilesTable.bootstrapTable('refresh');
+					$table.bootstrapTable('refresh');
+					console.log("hidden.bs.modal");
+					$(".mySWResForm").html("");
 				});
 			});
 		});
@@ -150,20 +142,34 @@
 		].join('');
 	}
 
+	function formatYesNo(value,row,index)
+    {
+        if (Number.isInteger(value))
+        {
+            return value==0 ? 'No' : 'Yes';
+        }
+        else
+        {
+            return value;
+        }
+    }
+
 	window.operateEvents = {
 		'click .edit': function (e, value, row, index)
 		{
-			$.get( "/osmanage/profiles/update/" + row['profileID']).done(function(data) {
-				$('#modalTitle').html("Edit OS Profile");
+			$.get( "/osmanage/app_filter/edit/" + row['appID']).done(function(data)
+            {
+                $('#modalTitle').html('Edit Software Restriction');
+				$('#modalCancelButton').html('Cancel');
 				$('#modalBody').html(data);
-				$('#modalFooter').hide();
 				$('#modalDialog').addClass("modal-wide");
-				$('#modalBody').css({'height':'72vh'});
 				$('#modalDialog').modal('show');
 
 				$("#modalDialog").on("hidden.bs.modal", function () {
-					$profilesTable.bootstrapTable('refresh');
+					$table.bootstrapTable('refresh');
+					$(".mySWResForm").html("");
 				});
+
 			});
 		},
 		'click .description': function (e, value, row, index) {
